# FiddleBot

./: .gitignore  README.md  pyproject.toml
.cursor/rules/: fdl-notebook-rules.mdc  fiddle-bot-rules.mdc
nb/: bug_fix.ipynb  metric_queries.ipynb  metrics_resp.json  queries.ipynb
src/: app.py  constants.py  fdl_chat.py  fdl_client.py  fdl_fast_mcp.py  fdl_mcp_server.py  fdl_plan_n_solve.py  fdl_queries.py  fdl_tracer.py  utils.py
